--- a/spring-netty/src/main/resources/application.properties
+++ b/spring-netty/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# jdbc_config   datasource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/im_bird?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=chenyunzhi123
+#mybatis-plus配置
 
+#打印日志,打印到控制台看到一些sql语句
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
